Add initial login system.